--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ spring:
         web-allow-others: true
       path: /h2-console
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
   datasource:
