--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: sa
     password:
   h2:
@@ -15,8 +15,12 @@ spring:
       hibernate:
         jdbc:
           batch_size: 500
-# 아래부터는 mock임
+  # 아래부터는 mock임
   kafka:
+    bootstrap-servers: localhost:7777
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
       group-id: csh
 expirationTopicName: csh
